pkgwwwdir = $(prefix)/www/razorback

nobase_dist_pkgwww_DATA = \
doc/razorback.vhost \
app/controllers/events_controller.rb \
app/controllers/alerts_controller.rb \
app/controllers/metadatas_controller.rb \
app/controllers/blocks_controller.rb \
app/controllers/block_inspections_controller.rb \
app/controllers/configuration_controller.rb \
app/controllers/block_events_controller.rb \
app/controllers/main_controller.rb \
app/controllers/system_status_controller.rb \
app/controllers/status_controller.rb \
app/controllers/uploads_controller.rb \
app/controllers/system_status_configuration_controller.rb \
app/controllers/detection_scripts_controller.rb \
app/controllers/routing_table_controller.rb \
app/controllers/application_controller.rb \
app/controllers/routing_counts_controller.rb \
app/controllers/nugget_status_controller.rb \
app/helpers/block_inspections_helper.rb \
app/helpers/status_helper.rb \
app/helpers/detection_scripts_helper.rb \
app/helpers/events_helper.rb \
app/helpers/configuration_helper.rb \
app/helpers/routing_table_helper.rb \
app/helpers/system_status_configuration_helper.rb \
app/helpers/main_helper.rb \
app/helpers/metadatas_helper.rb \
app/helpers/block_events_helper.rb \
app/helpers/uploads_helper.rb \
app/helpers/application_helper.rb \
app/helpers/blocks_helper.rb \
app/helpers/alerts_helper.rb \
app/helpers/nugget_status_helper.rb \
app/helpers/routing_counts_helper.rb \
app/helpers/system_status_helper.rb \
app/models/nugget_type.rb \
app/models/metadata_name.rb \
app/models/block.rb \
app/models/routing_instance.rb \
app/models/alert.rb \
app/models/event.rb \
app/models/config_option.rb \
app/models/nugget_status.rb \
app/models/detection_script.rb \
app/models/metabook.rb \
app/models/data_type.rb \
app/models/metadata_type.rb \
app/models/app_type.rb \
app/models/routing_count.rb \
app/models/system_status.rb \
app/models/metadata.rb \
app/models/nugget.rb \
app/models/block_inspection.rb \
app/views/metadatas/report.html.erb \
app/views/status/index.html.erb \
app/views/system_status/refresh.html.erb \
app/views/alerts/metadata.html.erb \
app/views/routing_counts/refresh.html.erb \
app/views/routing_table/refresh.html.erb \
app/views/block_events/metadata.html.erb \
app/views/main/index.html.erb \
app/views/blocks/_report_body.html.erb \
app/views/blocks/report.html.erb \
app/views/blocks/_tree_node.html.erb \
app/views/blocks/_report_header.html.erb \
app/views/blocks/tree.html.erb \
app/views/blocks/_update_tree.html.erb \
app/views/events/block_alerts.html.erb \
app/views/events/metadata.html.erb \
app/views/nugget_status/refresh.html.erb \
app/views/layouts/application.html.erb \
app/views/uploads/_block_upload_successful.html.erb \
app/views/uploads/_script_upload_successful.html.erb \
app/views/uploads/script.html.erb \
app/views/uploads/_block_upload_duplicate.html.erb \
vendor/plugins/render_component/lib/components.rb \
vendor/plugins/render_component/init.rb \
vendor/plugins/render_component/test/abstract_unit.rb \
vendor/plugins/render_component/test/components_test.rb \
vendor/plugins/render_component/Rakefile \
vendor/plugins/render_component/README \
vendor/plugins/active_scaffold/install.rb \
vendor/plugins/active_scaffold/public/blank.html \
vendor/plugins/active_scaffold/MIT-LICENSE \
vendor/plugins/active_scaffold/frontends/default/javascripts/rico_corner.js \
vendor/plugins/active_scaffold/frontends/default/javascripts/form_enhancements.js \
vendor/plugins/active_scaffold/frontends/default/javascripts/dhtml_history.js \
vendor/plugins/active_scaffold/frontends/default/javascripts/active_scaffold.js \
vendor/plugins/active_scaffold/frontends/default/images/add.gif \
vendor/plugins/active_scaffold/frontends/default/images/indicator.gif \
vendor/plugins/active_scaffold/frontends/default/images/close.gif \
vendor/plugins/active_scaffold/frontends/default/images/magnifier.png \
vendor/plugins/active_scaffold/frontends/default/images/indicator-small.gif \
vendor/plugins/active_scaffold/frontends/default/images/cross.png \
vendor/plugins/active_scaffold/frontends/default/images/arrow_up.gif \
vendor/plugins/active_scaffold/frontends/default/images/arrow_down.gif \
vendor/plugins/active_scaffold/frontends/default/stylesheets/stylesheet-ie.css \
vendor/plugins/active_scaffold/frontends/default/stylesheets/stylesheet.css \
vendor/plugins/active_scaffold/frontends/default/views/_show.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_horizontal_subform.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_form_association.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/form_messages_on_save.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/_form_messages.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_vertical_subform.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/on_create.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/add_existing_form.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/show.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_field_search.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/list.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/update.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/edit_associated.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/form_messages.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/_create_form_on_list.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/list.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/_nested.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_list_calculations.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_form_hidden_attribute.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_search.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/delete.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_list_record.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_vertical_subform_record.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_show_columns.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/field_search.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_horizontal_subform_record.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_create_form.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_live_search.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/on_update.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/_list_inline_adapter.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/update_column.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/destroy.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/search.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/add_existing.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/_list_column_headings.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_form.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_list_header.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_render_fields.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/_form_attribute.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/update_row.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/_form_association_footer.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_update_form.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/create.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_update_actions.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_messages.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/render_field.js.rjs \
vendor/plugins/active_scaffold/frontends/default/views/_list.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_add_existing_form.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_horizontal_subform_header.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_list_pagination_links.html.erb \
vendor/plugins/active_scaffold/frontends/default/views/_list_actions.html.erb \
vendor/plugins/active_scaffold/uninstall.rb \
vendor/plugins/active_scaffold/install_assets.rb \
vendor/plugins/active_scaffold/lib/dhtml_confirm.rb \
vendor/plugins/active_scaffold/lib/paginator.rb \
vendor/plugins/active_scaffold/lib/active_scaffold.rb \
vendor/plugins/active_scaffold/lib/responds_to_parent.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/form_column_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/controller_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/pagination_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/country_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/association_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/search_column_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/view_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/show_column_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/id_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/helpers/list_column_helpers.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/locale/ja.yml \
vendor/plugins/active_scaffold/lib/active_scaffold/locale/es.yml \
vendor/plugins/active_scaffold/lib/active_scaffold/locale/hu.yml \
vendor/plugins/active_scaffold/lib/active_scaffold/locale/ru.yml \
vendor/plugins/active_scaffold/lib/active_scaffold/locale/de.yml \
vendor/plugins/active_scaffold/lib/active_scaffold/locale/de.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/locale/fr.yml \
vendor/plugins/active_scaffold/lib/active_scaffold/locale/en.yml \
vendor/plugins/active_scaffold/lib/active_scaffold/finder.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/configurable.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/sorting.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/error_message.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/action_columns.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/actions.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/action_link.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/column.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/set.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/columns.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/data_structures/action_links.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/constraints.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/delete.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/create.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/field_search.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/live_search.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/show.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/core.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/subform.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/update.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/search.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/list.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/actions/nested.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/attribute_params.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/base.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/delete.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/create.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/field_search.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/live_search.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/show.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/form.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/core.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/subform.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/update.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/search.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/list.rb \
vendor/plugins/active_scaffold/lib/active_scaffold/config/nested.rb \
vendor/plugins/active_scaffold/lib/bridges/file_column/lib/as_file_column_bridge.rb \
vendor/plugins/active_scaffold/lib/bridges/file_column/lib/file_column_helpers.rb \
vendor/plugins/active_scaffold/lib/bridges/file_column/lib/form_ui.rb \
vendor/plugins/active_scaffold/lib/bridges/file_column/lib/list_ui.rb \
vendor/plugins/active_scaffold/lib/bridges/file_column/test/functional/file_column_keep_test.rb \
vendor/plugins/active_scaffold/lib/bridges/file_column/test/test_helper.rb \
vendor/plugins/active_scaffold/lib/bridges/file_column/test/mock_model.rb \
vendor/plugins/active_scaffold/lib/bridges/file_column/bridge.rb \
vendor/plugins/active_scaffold/lib/bridges/calendar_date_select/lib/as_cds_bridge.rb \
vendor/plugins/active_scaffold/lib/bridges/calendar_date_select/bridge.rb \
vendor/plugins/active_scaffold/lib/bridges/tiny_mce/lib/tiny_mce_bridge.rb \
vendor/plugins/active_scaffold/lib/bridges/tiny_mce/bridge.rb \
vendor/plugins/active_scaffold/lib/bridges/validation_reflection/lib/validation_reflection_bridge.rb \
vendor/plugins/active_scaffold/lib/bridges/validation_reflection/bridge.rb \
vendor/plugins/active_scaffold/lib/bridges/bridge.rb \
vendor/plugins/active_scaffold/lib/extensions/paginator_extensions.rb \
vendor/plugins/active_scaffold/lib/extensions/usa_state.rb \
vendor/plugins/active_scaffold/lib/extensions/unsaved_associated.rb \
vendor/plugins/active_scaffold/lib/extensions/reverse_associations.rb \
vendor/plugins/active_scaffold/lib/extensions/array.rb \
vendor/plugins/active_scaffold/lib/extensions/to_label.rb \
vendor/plugins/active_scaffold/lib/extensions/nil_id_in_url_params.rb \
vendor/plugins/active_scaffold/lib/extensions/name_option_for_datetime.rb \
vendor/plugins/active_scaffold/lib/extensions/generic_view_paths.rb \
vendor/plugins/active_scaffold/lib/extensions/resources.rb \
vendor/plugins/active_scaffold/lib/extensions/component_response_with_namespacing.rb \
vendor/plugins/active_scaffold/lib/extensions/localize.rb \
vendor/plugins/active_scaffold/lib/extensions/action_controller_rendering.rb \
vendor/plugins/active_scaffold/lib/extensions/action_view_rendering.rb \
vendor/plugins/active_scaffold/lib/extensions/unsaved_record.rb \
vendor/plugins/active_scaffold/lib/active_record_permissions.rb \
vendor/plugins/active_scaffold/.autotest \
vendor/plugins/active_scaffold/CHANGELOG \
vendor/plugins/active_scaffold/init.rb \
vendor/plugins/active_scaffold/test/const_mocker.rb \
vendor/plugins/active_scaffold/test/test_helper.rb \
vendor/plugins/active_scaffold/test/model_stub.rb \
vendor/plugins/active_scaffold/test/data_structures/set_test.rb \
vendor/plugins/active_scaffold/test/data_structures/actions_test.rb \
vendor/plugins/active_scaffold/test/data_structures/action_columns_test.rb \
vendor/plugins/active_scaffold/test/data_structures/column_test.rb \
vendor/plugins/active_scaffold/test/data_structures/standard_column_test.rb \
vendor/plugins/active_scaffold/test/data_structures/virtual_column_test.rb \
vendor/plugins/active_scaffold/test/data_structures/action_links_test.rb \
vendor/plugins/active_scaffold/test/data_structures/action_link_test.rb \
vendor/plugins/active_scaffold/test/data_structures/association_column_test.rb \
vendor/plugins/active_scaffold/test/data_structures/columns_test.rb \
vendor/plugins/active_scaffold/test/data_structures/sorting_test.rb \
vendor/plugins/active_scaffold/test/data_structures/error_message_test.rb \
vendor/plugins/active_scaffold/test/mock_app/app/controllers/application_controller.rb \
vendor/plugins/active_scaffold/test/mock_app/app/helpers/application_helper.rb \
vendor/plugins/active_scaffold/test/mock_app/db/test.sqlite3 \
vendor/plugins/active_scaffold/test/mock_app/public/javascripts/active_scaffold/DO_NOT_EDIT \
vendor/plugins/active_scaffold/test/mock_app/public/javascripts/active_scaffold/default/rico_corner.js \
vendor/plugins/active_scaffold/test/mock_app/public/javascripts/active_scaffold/default/form_enhancements.js \
vendor/plugins/active_scaffold/test/mock_app/public/javascripts/active_scaffold/default/dhtml_history.js \
vendor/plugins/active_scaffold/test/mock_app/public/javascripts/active_scaffold/default/active_scaffold.js \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/DO_NOT_EDIT \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/default/add.gif \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/default/indicator.gif \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/default/close.gif \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/default/magnifier.png \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/default/indicator-small.gif \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/default/cross.png \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/default/arrow_up.gif \
vendor/plugins/active_scaffold/test/mock_app/public/images/active_scaffold/default/arrow_down.gif \
vendor/plugins/active_scaffold/test/mock_app/public/stylesheets/active_scaffold/DO_NOT_EDIT \
vendor/plugins/active_scaffold/test/mock_app/public/stylesheets/active_scaffold/default/stylesheet-ie.css \
vendor/plugins/active_scaffold/test/mock_app/public/stylesheets/active_scaffold/default/stylesheet.css \
vendor/plugins/active_scaffold/test/mock_app/public/blank.html \
vendor/plugins/active_scaffold/test/mock_app/.gitignore \
vendor/plugins/active_scaffold/test/mock_app/config/environments/development.rb \
vendor/plugins/active_scaffold/test/mock_app/config/environments/production.rb \
vendor/plugins/active_scaffold/test/mock_app/config/environments/test.rb \
vendor/plugins/active_scaffold/test/mock_app/config/routes.rb \
vendor/plugins/active_scaffold/test/mock_app/config/boot.rb \
vendor/plugins/active_scaffold/test/mock_app/config/database.yml \
vendor/plugins/active_scaffold/test/mock_app/config/initializers/mime_types.rb \
vendor/plugins/active_scaffold/test/mock_app/config/initializers/session_store.rb \
vendor/plugins/active_scaffold/test/mock_app/config/initializers/inflections.rb \
vendor/plugins/active_scaffold/test/mock_app/config/initializers/new_rails_defaults.rb \
vendor/plugins/active_scaffold/test/mock_app/config/initializers/backtrace_silencers.rb \
vendor/plugins/active_scaffold/test/mock_app/config/environment.rb \
vendor/plugins/active_scaffold/test/mock_app/config/locales/en.yml \
vendor/plugins/active_scaffold/test/config/show_test.rb \
vendor/plugins/active_scaffold/test/config/create_test.rb \
vendor/plugins/active_scaffold/test/config/update_test.rb \
vendor/plugins/active_scaffold/test/config/base_test.rb \
vendor/plugins/active_scaffold/test/config/list_test.rb \
vendor/plugins/active_scaffold/test/run_all.rb \
vendor/plugins/active_scaffold/test/bridges/bridge_test.rb \
vendor/plugins/active_scaffold/test/extensions/active_record_test.rb \
vendor/plugins/active_scaffold/test/extensions/array_test.rb \
vendor/plugins/active_scaffold/test/misc/attribute_params_test.rb \
vendor/plugins/active_scaffold/test/misc/active_record_permissions_test.rb \
vendor/plugins/active_scaffold/test/misc/pagination_helpers_test.rb \
vendor/plugins/active_scaffold/test/misc/configurable_test.rb \
vendor/plugins/active_scaffold/test/misc/constraints_test.rb \
vendor/plugins/active_scaffold/test/misc/lang_test.rb \
vendor/plugins/active_scaffold/test/misc/finder_test.rb \
vendor/plugins/active_scaffold/Rakefile \
vendor/plugins/active_scaffold/environment.rb \
vendor/plugins/active_scaffold/README \
vendor/plugins/daemon_generator/install.rb \
vendor/plugins/daemon_generator/generators/daemon/daemon_generator.rb \
vendor/plugins/daemon_generator/generators/daemon/templates/script.rb \
vendor/plugins/daemon_generator/generators/daemon/templates/daemons.yml \
vendor/plugins/daemon_generator/generators/daemon/templates/script_ctl \
vendor/plugins/daemon_generator/generators/daemon/templates/daemons \
vendor/plugins/daemon_generator/README \
db/schema.rb \
db/migrate/20110801171202_create_routing_instances.rb \
db/migrate/20110901200132_add_razorbackblockfilepath.rb \
db/migrate/20110727192431_create_nugget_statuses.rb \
db/migrate/20110727230120_create_system_statuses.rb \
db/migrate/20110727182431_create_detection_scripts.rb \
db/migrate/20110727174229_create_config_options.rb \
db/migrate/20110731014836_create_routing_counts.rb \
db/seeds.rb \
public/javascripts/application.js \
public/javascripts/jquery.jstree.js \
public/javascripts/effects.js \
public/javascripts/diQuery-collapsiblePanel.js \
public/javascripts/prototype.js \
public/javascripts/loader-min.js \
public/javascripts/active_scaffold/DO_NOT_EDIT \
public/javascripts/active_scaffold/default/rico_corner.js \
public/javascripts/active_scaffold/default/form_enhancements.js \
public/javascripts/active_scaffold/default/dhtml_history.js \
public/javascripts/active_scaffold/default/active_scaffold.js \
public/javascripts/jquery-1.6.2.min.js \
public/javascripts/themes/default-rtl/dots.gif \
public/javascripts/themes/default-rtl/d.png \
public/javascripts/themes/default-rtl/throbber.gif \
public/javascripts/themes/default-rtl/d.gif \
public/javascripts/themes/default-rtl/style.css \
public/javascripts/themes/default/d.png \
public/javascripts/themes/default/throbber.gif \
public/javascripts/themes/default/d.gif \
public/javascripts/themes/default/style.css \
public/javascripts/themes/classic/d.png \
public/javascripts/themes/classic/throbber.gif \
public/javascripts/themes/classic/d.gif \
public/javascripts/themes/classic/dot_for_ie.gif \
public/javascripts/themes/classic/style.css \
public/javascripts/themes/apple/d.png \
public/javascripts/themes/apple/bg.jpg \
public/javascripts/themes/apple/throbber.gif \
public/javascripts/themes/apple/dot_for_ie.gif \
public/javascripts/themes/apple/style.css \
public/javascripts/superfish/jquery.bgiframe.min.js \
public/javascripts/superfish/superfish.js \
public/javascripts/superfish/jquery-1.2.6.min.js \
public/javascripts/superfish/supersubs.js \
public/javascripts/superfish/hoverIntent.js \
public/javascripts/dragdrop.js \
public/javascripts/controls.js \
public/favicon.ico \
public/images/Razorback.png \
public/images/folder-good.png \
public/images/file-good.png \
public/images/file-suspicious.png \
public/images/rails.png \
public/images/state_hover_bg.png \
public/images/state_active_bg.png \
public/images/state_default_bg.png \
public/images/active_scaffold/DO_NOT_EDIT \
public/images/active_scaffold/default/add.gif \
public/images/active_scaffold/default/indicator.gif \
public/images/active_scaffold/default/close.gif \
public/images/active_scaffold/default/magnifier.png \
public/images/active_scaffold/default/indicator-small.gif \
public/images/active_scaffold/default/cross.png \
public/images/active_scaffold/default/arrow_up.gif \
public/images/active_scaffold/default/arrow_down.gif \
public/images/loading_indicator.gif \
public/images/file-bad.png \
public/images/superfish/arrows-ffffff.png \
public/images/superfish/shadow.png \
public/images/icon_sprite.png \
public/images/folder-bad.png \
public/stylesheets/main.css \
public/stylesheets/gallery-aui-skin-classic.css \
public/stylesheets/gallery-aui-skin-base.css \
public/stylesheets/active_scaffold/DO_NOT_EDIT \
public/stylesheets/active_scaffold/default/stylesheet-ie.css \
public/stylesheets/active_scaffold/default/stylesheet.css \
public/stylesheets/superfish/superfish-navbar.css \
public/stylesheets/superfish/superfish.css \
public/stylesheets/superfish/superfish-vertical.css \
public/blank.html \
public/404.html \
public/422.html \
public/robots.txt \
public/500.html \
lib/daemons/routing_table_ctl \
lib/daemons/routing_status_ctl \
lib/daemons/routing_status.rb \
lib/daemons/nugget_status.rb \
lib/daemons/nugget_status_ctl \
lib/daemons/routing_table.rb \
lib/daemons/system_status_ctl \
lib/daemons/system_status.rb \
config/environments/development.rb \
config/environments/production.rb \
config/environments/test.rb \
config/routes.rb \
config/database.yml.sample \
config/boot.rb \
config/daemons.yml \
config/initializers/mime_types.rb \
config/initializers/session_store.rb \
config/initializers/inflections.rb \
config/initializers/new_rails_defaults.rb \
config/initializers/backtrace_silencers.rb \
config/environment.rb \
config/locales/en.yml \
test/functional/alerts_controller_test.rb \
test/functional/detection_scripts_controller_test.rb \
test/functional/blocks_controller_test.rb \
test/functional/routing_table_controller_test.rb \
test/functional/system_status_controller_test.rb \
test/functional/block_events_controller_test.rb \
test/functional/nugget_status_controller_test.rb \
test/functional/status_controller_test.rb \
test/functional/block_inspections_controller_test.rb \
test/functional/events_controller_test.rb \
test/functional/configuration_controller_test.rb \
test/functional/uploads_controller_test.rb \
test/functional/routing_counts_controller_test.rb \
test/functional/main_controller_test.rb \
test/functional/metadatas_controller_test.rb \
test/functional/system_status_configuration_controller_test.rb \
test/test_helper.rb \
test/unit/alert_test.rb \
test/unit/helpers/status_helper_test.rb \
test/unit/helpers/system_status_helper_test.rb \
test/unit/helpers/blocks_helper_test.rb \
test/unit/helpers/block_inspections_helper_test.rb \
test/unit/helpers/configuration_helper_test.rb \
test/unit/helpers/block_events_helper_test.rb \
test/unit/helpers/uploads_helper_test.rb \
test/unit/helpers/system_status_configuration_helper_test.rb \
test/unit/helpers/metadatas_helper_test.rb \
test/unit/helpers/main_helper_test.rb \
test/unit/helpers/nugget_status_helper_test.rb \
test/unit/helpers/events_helper_test.rb \
test/unit/helpers/routing_counts_helper_test.rb \
test/unit/helpers/alerts_helper_test.rb \
test/unit/helpers/detection_scripts_helper_test.rb \
test/unit/helpers/routing_table_helper_test.rb \
test/unit/block_inspection_test.rb \
test/unit/data_type_test.rb \
test/unit/nugget_test.rb \
test/unit/nugget_type_test.rb \
test/unit/block_upload_status_test.rb \
test/unit/block_test.rb \
test/unit/detection_script_test.rb \
test/unit/metadata_test.rb \
test/unit/config_option_test.rb \
test/unit/event_test.rb \
test/unit/nugget_status_test.rb \
test/unit/routing_instance_test.rb \
test/unit/metabook_test.rb \
test/unit/metadata_name_test.rb \
test/unit/system_status_test.rb \
test/unit/routing_count_test.rb \
test/unit/app_type_test.rb \
test/unit/metadata_type_test.rb \
test/fixtures/alerts.yml \
test/fixtures/metabooks.yml \
test/fixtures/routing_instances.yml \
test/fixtures/events.yml \
test/fixtures/system_statuses.yml \
test/fixtures/nuggets.yml \
test/fixtures/app_types.yml \
test/fixtures/detection_scripts.yml \
test/fixtures/metadata_names.yml \
test/fixtures/blocks.yml \
test/fixtures/data_types.yml \
test/fixtures/nugget_statuses.yml \
test/fixtures/block_inspections.yml \
test/fixtures/block_upload_statuses.yml \
test/fixtures/routing_counts.yml \
test/fixtures/config_options.yml \
test/fixtures/metadatas.yml \
test/fixtures/metadata_types.yml \
test/fixtures/nugget_types.yml \
test/performance/browsing_test.rb \
Rakefile


nobase_dist_pkgwww_SCRIPTS = \
script/runner \
script/console \
script/about \
script/server \
script/dbconsole \
script/generate \
script/plugin \
script/daemons \
script/performance/profiler \
script/performance/benchmarker \
script/destroy

EXTRA_DIST = Makefile.am 



