razorbackincludedir="${includedir}/razorback"

nobase_razorbackinclude_HEADERS = \
libssh/agent.h \
libssh/auth.h \
libssh/bind.h \
libssh/buffer.h \
libssh/callbacks.h \
libssh/channels.h \
libssh/crc32.h \
libssh/crypto.h \
libssh/dh.h \
libssh/kex.h \
libssh/keys.h \
libssh/legacy.h \
libssh/libcrypto.h \
libssh/libgcrypt.h \
libssh/libssh.h \
libssh/libsshpp.hpp \
libssh/messages.h \
libssh/misc.h \
libssh/options.h \
libssh/packet.h \
libssh/pcap.h \
libssh/pki.h \
libssh/poll.h \
libssh/priv.h \
libssh/scp.h \
libssh/server.h \
libssh/session.h \
libssh/sftp.h \
libssh/socket.h \
libssh/ssh1.h \
libssh/ssh2.h \
libssh/string.h \
libssh/threads.h \
libssh/wrapper.h \
libssh/pki_priv.h \
libssh/ecdh.h


