
moduledir=$(libexecdir)
libexec_SCRIPTS = dissector.py

nobase_dist_module_DATA= \
modules/__init__.py \
modules/detector/javascript/__init__.py \
modules/detector/javascript/javascript.py \
modules/detector/file/vulnerability_finder.py \
modules/detector/file/__init__.py \
modules/detector/__init__.py \
modules/detector/object/windows_shell_execute.py \
modules/detector/object/__init__.py \
modules/detector/object/open_action.py \
modules/detector/object/adobe_u3d_meshcont.py \
modules/detector/object/adobe_u3d_meshdecl.py \
modules/detector/object/adobe_jbig2decode.py \
modules/detector/object/adobe_flatedecode_predictor02.py \
modules/detector/object/embedded_file.py \
modules/utils.py

EXTRA_DIST = ${libexec_SCRIPTS}
