# $Id$

AUTOMAKE_OPTIONS = foreign

SUBDIRS = environment

includedir = $(prefix)/include/emu

noinst_HEADERS = emu.h
noinst_HEADERS += emu_cpu_data.h
noinst_HEADERS += emu_cpu_functions.h
noinst_HEADERS += emu_cpu.h
noinst_HEADERS += emu_cpu_instruction.h
noinst_HEADERS += emu_cpu_itables.h
noinst_HEADERS += emu_cpu_stack.h
noinst_HEADERS += emu_fpu_instruction.h
noinst_HEADERS += emu_getpc.h
noinst_HEADERS += emu_graph.h
noinst_HEADERS += emu_hashtable.h
noinst_HEADERS += emu_instruction.h
noinst_HEADERS += emu_list.h
noinst_HEADERS += emu_log.h
noinst_HEADERS += emu_memory.h
noinst_HEADERS += emu_queue.h
noinst_HEADERS += emu_shellcode.h
noinst_HEADERS += emu_source.h
noinst_HEADERS += emu_stack.h
noinst_HEADERS += emu_string.h
noinst_HEADERS += emu_track.h


#include_HEADERS = emu.h
#include_HEADERS += emu_log.h
#include_HEADERS += emu_cpu.h
#include_HEADERS += emu_memory.h


#noinst_HEADERS = emu_cpu_data.h
#noinst_HEADERS += emu_cpu_functions.h
#noinst_HEADERS += emu_cpu_itables.h
#noinst_HEADERS += emu_cpu_stack.h
