# $Id$

includedir = $(prefix)/include/emu/environment/win32

noinst_HEADERS = emu_env_w32.h
noinst_HEADERS += emu_env_w32_dll.h
noinst_HEADERS += env_w32_dll_export_hooks.h
noinst_HEADERS += emu_env_w32_dll_export.h
noinst_HEADERS += env_w32_dll_export_kernel32_hooks.h
noinst_HEADERS += env_w32_dll_export_urlmon_hooks.h
noinst_HEADERS += env_w32_dll_export_ws2_32_hooks.h
noinst_HEADERS += env_w32_dll_export_msvcrt_hooks.h

